--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ bcrypt==3.2.2
 blinker==1.5
 cffi==1.15.1
 click==8.1.3
+DateTime==4.5
 decorator==5.1.1
 executing==0.10.0
 Flask==2.2.2
@@ -30,6 +31,7 @@ ptyprocess==0.7.0
 pure-eval==0.2.2
 pycparser==2.21
 Pygments==2.13.0
+pytz==2022.2.1
 six==1.16.0
 SQLAlchemy==1.4.40
 stack-data==0.4.0
@@ -38,3 +40,4 @@ wcwidth==0.2.5
 Werkzeug==2.2.2
 WTForms==3.0.1
 zipp==3.8.1
+zope.interface==5.4.0
