--- a/requirements.txt
+++ b/requirements.txt
@@ -8,12 +8,14 @@ cffi==1.15.1
 chardet==3.0.4
 Click==7.0
 colorama==0.4.3
+command-not-found==0.3
 configobj==5.0.6
 constantly==15.1.0
 cryptography==2.8
 dbus-python==1.2.16
 decorator==5.1.1
 distro==1.4.0
+distro-info===0.23ubuntu1
 entrypoints==0.3
 executing==0.8.3
 Flask==1.1.1
@@ -32,6 +34,7 @@ jsonpatch==1.22
 jsonpointer==2.0
 jsonschema==3.2.0
 keyring==18.0.1
+language-selector==0.1
 launchpadlib==1.10.13
 lazr.restfulclient==0.14.2
 lazr.uri==1.0.3
@@ -53,7 +56,6 @@ pyasn1==0.4.2
 pyasn1-modules==0.2.1
 pycparser==2.21
 Pygments==2.12.0
-PyGObject==3.36.0
 PyHamcrest==1.9.0
 pyinotify==0.9.6
 PyJWT==1.7.1
@@ -62,6 +64,8 @@ PyNaCl==1.3.0
 pyOpenSSL==19.0.0
 pyrsistent==0.15.5
 pyserial==3.4
+python-apt==2.0.0+ubuntu0.20.4.7
+python-debian===0.1.36ubuntu1
 PyYAML==5.3.1
 requests==2.22.0
 requests-unixsocket==0.2.0
@@ -69,6 +73,7 @@ SecretStorage==2.3.1
 service-identity==18.1.0
 simplejson==3.16.0
 six==1.14.0
+sos==4.2
 SQLAlchemy==1.4.39
 ssh-import-id==5.10
 stack-data==0.2.0
@@ -77,6 +82,9 @@ torch==1.11.0
 traitlets==5.1.1
 Twisted==18.9.0
 typing-extensions==4.2.0
+ubuntu-advantage-tools==27.6
+ufw==0.36
+unattended-upgrades==0.1
 urllib3==1.25.8
 wadllib==1.3.3
 wcwidth==0.2.5
